--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,5 @@
 {
   "name": "pose-tracker-client",
-  "version": "1.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -11,7 +10,10 @@
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.11",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwindcss": "^3.4.10",
+    "postcss": "^8.4.31",
+    "autoprefixer": "^10.4.15"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
