--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,14 @@
   },
   "dependencies": {
     "@mediapipe/tasks-vision": "^0.10.11",
+    "autoprefixer": "^10.4.15",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tailwindcss": "^3.4.10",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.15"
+    "tailwindcss": "^3.4.10"
   },
   "devDependencies": {
+    "@types/node": "^24.3.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.1",
